# ai-dotfiles

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.beads/: issues.jsonl
.quint/: context.md  quint.db  state.json
configs/claude/: mcp-examples.md  settings.json  statusline-command.py  statusline_command.py
configs/claude/commands/: explain.md  refactor.md  review.md  test.md
docs/: README.md  agents.md  mental-models.md  prompt-modes.md  scratchpad.md  tools.md
prompts/system/: code-assistant.md  debugging.md  pipeline-debugging.md  sql-optimization.md
scripts/: bootstrap-project.sh  setup.sh
scripts/examples/: simple_agent.py
tests/: test_statusline_command.py
